Fix failure handling when saving reference images

BUG: 396143